oem-config (1.31) UNRELEASED; urgency=low

  * Remove /etc/udev/rules.d/70-persistent-cd.rules and
    /etc/udev/rules.d/70-persistent-net.rules in oem-config-prepare, in case
    the system is going to be cloned.
  * Remove /home/oem/.ssh/known_hosts in oem-config-prepare. If ssh was used
    then this might be slightly sensitive.
  * Allow user creation even if a non-system user already exists (thanks,
    Torsten Spindler; LP: #153310).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 29 Feb 2008 21:09:38 +0000

oem-config (1.30) hardy; urgency=low

  [ Evan Dandrea ]
  * Fix zoommap import, references to ubiquity (LP: #194491).

  [ Matthias Klose ]
  * Automatic update of included source packages.

 -- Matthias Klose <doko@ubuntu.com>  Fri, 29 Feb 2008 20:41:40 +0000

oem-config (1.29) hardy; urgency=low

  * Drop build dependency on python-xml.
  * d-i/source/localechooser/iso3166tab.py: Include ErrorPrinter and
    DefaultHandler from obsolete saxutils.py

 -- Matthias Klose <doko@ubuntu.com>  Fri, 29 Feb 2008 15:45:24 +0000

oem-config (1.28) hardy; urgency=low

  [ Colin Watson ]
  * Build-depend on dctrl-tools rather than grep-dctrl.

  [ Evan Dandrea ]
  * Use new timezone widget from Ubiquity.  oem-config now shrinks to a
    much smaller size (LP: #191823).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 20 Feb 2008 10:49:44 -0500

oem-config (1.27) hardy; urgency=low

  [ Colin Watson ]
  * Call 'fontconfig-voodoo --auto --force --quiet' on startup and when the
    language is changed. May help with LP #185269.

  [ Evan Dandrea ]
  * Updated the location of gnome-settings-daemon (LP: #190029).
  * Automatic update of included source packages: console-setup
    1.21ubuntu2.

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 07 Feb 2008 16:36:50 -0500

oem-config (1.26) hardy; urgency=low

  * Activate appropriate input methods when changing language (LP: #181857).
  * Update console-setup component for layout and variant changes in
    console-setup 1.21ubuntu1.